--- a/app/src/main/res/layout/fragment_discovery.xml
+++ b/app/src/main/res/layout/fragment_discovery.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color_primary"
+    android:clickable="true"
     android:fillViewport="true"
     tools:context=".ui.discovery.DiscoveryFragment">
 
