--- a/app/src/main/res/layout/item_ingredient.xml
+++ b/app/src/main/res/layout/item_ingredient.xml
@@ -17,15 +17,16 @@
 
     <TextView
         android:id="@+id/text_category"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_10dp"
         android:ellipsize="end"
+        android:maxLines="1"
         android:textAlignment="center"
         android:textColor="@color/color_text_icon"
         android:textSize="@dimen/text_size_normal"
-        app:layout_constraintEnd_toEndOf="@id/image_category"
-        app:layout_constraintStart_toStartOf="@id/image_category"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/image_category" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
