--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="color_primary">#FFFFFFFF</color>
-    <color name="color_primary_varient">#FF000000</color>
+    <color name="color_primary_variant">#FF000000</color>
     <color name="color_secondary">#AAAAAA</color>
     <color name="color_black">#FF000000</color>
     <color name="color_white">#FFFFFFFF</color>
@@ -11,5 +11,8 @@
     <color name="color_blue">#309FF8</color>
     <color name="color_gray">#BCBCBC</color>
     <color name="color_trans_50">#80000000</color>
+    <color name="color_trans_30_variant">#4DFFFFFF</color>
+    <color name="color_red">#F60758</color>
+    <color name="color_background_text_box">#FBFBFB</color>
 
 </resources>
